--- a/tracker.css
+++ b/tracker.css
@@ -609,7 +609,7 @@ th > img {
     left:calc(var(--map-grid) * 46);
 }
 
-/* AREA 6 - Ukin-Na */
+/* AREA 6 - Ukkin-Na */
 
 #BlackCoat {
     position: absolute;
