Refactored repetitive HTML to be populated from javascript instead

--- a/tracker.css
+++ b/tracker.css
@@ -1,13 +1,13 @@
-:root {
-    --map-grid: 12px;
-    --item-grig: 18px;
-}
-
 body {
     background: #242424;
     color: #ffffff;
     font-size: 16px;
     image-rendering: pixelated;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 @font-face {
@@ -117,772 +117,4 @@ th > img {
     position: absolute;
     top: 4px;
     left: -2px;
-}
-
-/* AREA 1 - Eribu */
-
-#DataDisruptor {
-    position: absolute;
-    top: calc(var(--map-grid) * 43);
-    left:calc(var(--map-grid) * 7);
-}
-
-#Nova {
-    position: absolute;
-    top: calc(var(--map-grid) * 36);
-    left:calc(var(--map-grid) * 17);
-}
-
-#SizeNode1 {
-    position: absolute;
-    top: calc(var(--map-grid) * 39);
-    left:calc(var(--map-grid) * 9);
-}
-
-#Drill {
-    position: absolute;
-    top: calc(var(--map-grid) * 41);
-    left:calc(var(--map-grid) * 17);
-}
-
-#PowerNode1 {
-    position: absolute;
-    top: calc(var(--map-grid) * 42);
-    left:calc(var(--map-grid) * 15);
-}
-
-#MultiDisruptor {
-    position: absolute;
-    top: calc(var(--map-grid) * 37);
-    left:calc(var(--map-grid) * 10);
-}
-
-#HealthNode1 {
-    position: absolute;
-    top: calc(var(--map-grid) * 50);
-    left:calc(var(--map-grid) * 16);
-}
-
-#HealthNodeFragment2 {
-    position: absolute;
-    top: calc(var(--map-grid) * 49);
-    left:calc(var(--map-grid) * 13);
-}
-
-#HealthNodeFragment13 {
-    position: absolute;
-    top: calc(var(--map-grid) * 43);
-    left:calc(var(--map-grid) * 3);
-}
-
-#PowerNodeFragment16 {
-    position: absolute;
-    top: calc(var(--map-grid) * 48);
-    left:calc(var(--map-grid) * 16);
-}
-
-#HealthNode9 {
-    position: absolute;
-    top: calc(var(--map-grid) * 34);
-    left:calc(var(--map-grid) * 15);
-}
-
-#LightningGun {
-    position: absolute;
-    top: calc(var(--map-grid) * 45);
-    left:calc(var(--map-grid) * 11);
-}
-
-#Note2 {
-    position: absolute;
-    top: calc(var(--map-grid) * 41);
-    left:calc(var(--map-grid) * 9);
-}
-
-#WallTrace {
-    position: absolute;
-    top: calc(var(--map-grid) * 47);
-    left:calc(var(--map-grid) * 12);
-}
-
-#PowerNodeFragment2 {
-    position: absolute;
-    top: calc(var(--map-grid) * 37);
-    left:calc(var(--map-grid) * 7);
-}
-
-#FlameThrower {
-    position: absolute;
-    top: calc(var(--map-grid) * 38);
-    left:calc(var(--map-grid) * 3);
-}
-
-/* AREA 2 - Absu */
-
-#HealthNodeFragment1 {
-    position: absolute;
-    top: calc(var(--map-grid) * 57);
-    left:calc(var(--map-grid) * 17);
-}
-
-#Kilver {
-    position: absolute;
-    top: calc(var(--map-grid) * 59);
-    left:calc(var(--map-grid) * 21);
-}
-
-#HealthNodeFragment4 {
-    position: absolute;
-    top: calc(var(--map-grid) * 54);
-    left:calc(var(--map-grid) * 19);
-}
-
-#AddressDisruptor1 {
-    position: absolute;
-    top: calc(var(--map-grid) * 57);
-    left:calc(var(--map-grid) * 26);
-}
-
-#PowerNodeFragment7 {
-    position: absolute;
-    top: calc(var(--map-grid) * 58);
-    left:calc(var(--map-grid) * 13);
-}
-
-#HealthNode2 {
-    position: absolute;
-    top: calc(var(--map-grid) * 58);
-    left:calc(var(--map-grid) * 28);
-}
-
-#SizeNode2 {
-    position: absolute;
-    top: calc(var(--map-grid) * 61);
-    left:calc(var(--map-grid) * 28);
-}
-
-#Note15 {
-    position: absolute;
-    top: calc(var(--map-grid) * 62);
-    left:calc(var(--map-grid) * 26);
-}
-
-#Note24 {
-    position: absolute;
-    top: calc(var(--map-grid) * 60);
-    left:calc(var(--map-grid) * 31);
-}
-
-#HealthNodeFragment3 {
-    position: absolute;
-    top: calc(var(--map-grid) * 61);
-    left:calc(var(--map-grid) * 34);
-}
-
-#PowerNode2 {
-    position: absolute;
-    top: calc(var(--map-grid) * 63);
-    left:calc(var(--map-grid) * 37);
-}
-
-#Note14 {
-    position: absolute;
-    top: calc(var(--map-grid) * 61);
-    left:calc(var(--map-grid) * 20);
-}
-
-#Note7 {
-    position: absolute;
-    top: calc(var(--map-grid) * 65);
-    left:calc(var(--map-grid) * 20);
-}
-
-#RangeNode1 {
-    position: absolute;
-    top: calc(var(--map-grid) * 62);
-    left:calc(var(--map-grid) * 30);
-}
-
-#Note16 {
-    position: absolute;
-    top: calc(var(--map-grid) * 60);
-    left:calc(var(--map-grid) * 15);
-}
-
-#PowerNodeFragment3 {
-    position: absolute;
-    top: calc(var(--map-grid) * 53);
-    left:calc(var(--map-grid) * 20);
-}
-
-#Note28 {
-    position: absolute;
-    top: calc(var(--map-grid) * 63);
-    left:calc(var(--map-grid) * 32);
-}
-
-#HealthNodeFragment6 {
-    position: absolute;
-    top: calc(var(--map-grid) * 51);
-    left:calc(var(--map-grid) * 30);
-}
-
-#PowerNodeFragment5 {
-    position: absolute;
-    top: calc(var(--map-grid) * 52);
-    left:calc(var(--map-grid) * 22);
-}
-
-#PowerNodeFragment6 {
-    position: absolute;
-    top: calc(var(--map-grid) * 52);
-    left:calc(var(--map-grid) * 23);
-}
-
-#InertialPulse {
-    position: absolute;
-    top: calc(var(--map-grid) * 59);
-    left:calc(var(--map-grid) * 37);
-}
-
-#RangeNode4 {
-    position: absolute;
-    top: calc(var(--map-grid) * 62);
-    left:calc(var(--map-grid) * 20);
-}
-
-#PowerNodeFragment9 {
-    position: absolute;
-    top: calc(var(--map-grid) * 64);
-    left:calc(var(--map-grid) * 35);
-}
-
-#PowerNodeFragment4 {
-    position: absolute;
-    top: calc(var(--map-grid) * 53);
-    left:calc(var(--map-grid) * 21);
-}
-
-#DataGrenade {
-    position: absolute;
-    top: calc(var(--map-grid) * 62);
-    left:calc(var(--map-grid) * 16);
-}
-
-/* AREA 3 - Zi */
-
-#Note10 {
-    position: absolute;
-    top: calc(var(--map-grid) * 54);
-    left:calc(var(--map-grid) * 45);
-}
-
-#HealthNodeFragment14 {
-    position: absolute;
-    top: calc(var(--map-grid) * 61);
-    left:calc(var(--map-grid) * 43);
-}
-
-#GlitchTeleport {
-    position: absolute;
-    top: calc(var(--map-grid) * 52);
-    left:calc(var(--map-grid) * 50);
-}
-
-#RangeNode2 {
-    position: absolute;
-    top: calc(var(--map-grid) * 62);
-    left:calc(var(--map-grid) * 41);
-}
-
-#TendrilsTop {
-    position: absolute;
-    top: calc(var(--map-grid) * 60);
-    left:calc(var(--map-grid) * 40);
-}
-
-#HealthNodeFragment7 {
-    position: absolute;
-    top: calc(var(--map-grid) * 55);
-    left:calc(var(--map-grid) * 47);
-}
-
-#SizeNode3 {
-    position: absolute;
-    top: calc(var(--map-grid) * 59);
-    left:calc(var(--map-grid) * 46);
-}
-
-#HealthNode3 {
-    position: absolute;
-    top: calc(var(--map-grid) * 52);
-    left:calc(var(--map-grid) * 47);
-}
-
-#HealthNodeFragment5 {
-    position: absolute;
-    top: calc(var(--map-grid) * 60);
-    left:calc(var(--map-grid) * 48);
-}
-
-#PasswordTool {
-    position: absolute;
-    top: calc(var(--map-grid) * 63);
-    left:calc(var(--map-grid) * 46);
-}
-
-#Note19 {
-    position: absolute;
-    top: calc(var(--map-grid) * 63);
-    left:calc(var(--map-grid) * 48);
-}
-
-#Note20 {
-    position: absolute;
-    top: calc(var(--map-grid) * 56);
-    left:calc(var(--map-grid) * 39);
-}
-
-#Voranj {
-    position: absolute;
-    top: calc(var(--map-grid) * 57);
-    left:calc(var(--map-grid) * 42);
-}
-
-#PowerNodeFragment8 {
-    position: absolute;
-    top: calc(var(--map-grid) * 59);
-    left:calc(var(--map-grid) * 38);
-}
-
-#PowerNodeFragment1 {
-    position: absolute;
-    top: calc(var(--map-grid) * 51);
-    left:calc(var(--map-grid) * 49);
-}
-
-/* AREA 4 - Kur */
-
-#HighJump {
-    position: absolute;
-    top: calc(var(--map-grid) * 51);
-    left:calc(var(--map-grid) * 57);
-}
-
-#FireWall {
-    position: absolute;
-    top: calc(var(--map-grid) * 49);
-    left:calc(var(--map-grid) * 56);
-}
-
-#PowerNode3 {
-    position: absolute;
-    top: calc(var(--map-grid) * 48);
-    left:calc(var(--map-grid) * 52);
-}
-
-#DroneGun {
-    position: absolute;
-    top: calc(var(--map-grid) * 39);
-    left:calc(var(--map-grid) * 58);
-}
-
-#HealthNodeFragment10 {
-    position: absolute;
-    top: calc(var(--map-grid) * 48);
-    left:calc(var(--map-grid) * 57);
-}
-
-#VerticalSpread {
-    position: absolute;
-    top: calc(var(--map-grid) * 42);
-    left:calc(var(--map-grid) * 57);
-}
-
-#HealthNodeFragment8 {
-    position: absolute;
-    top: calc(var(--map-grid) * 38);
-    left:calc(var(--map-grid) * 55);
-}
-
-#AddressDisruptor2 {
-    position: absolute;
-    top: calc(var(--map-grid) * 51);
-    left:calc(var(--map-grid) * 53);
-}
-
-#HealthNodeFragment9 {
-    position: absolute;
-    top: calc(var(--map-grid) * 42);
-    left:calc(var(--map-grid) * 58);
-}
-
-#HealthNode4 {
-    position: absolute;
-    top: calc(var(--map-grid) * 38);
-    left:calc(var(--map-grid) * 61);
-}
-
-#Grapple {
-    position: absolute;
-    top: calc(var(--map-grid) * 34);
-    left:calc(var(--map-grid) * 68);
-}
-
-#TetheredCharge {
-    position: absolute;
-    top: calc(var(--map-grid) * 51);
-    left:calc(var(--map-grid) * 61);
-}
-
-#Note13 {
-    position: absolute;
-    top: calc(var(--map-grid) * 35);
-    left:calc(var(--map-grid) * 60);
-}
-
-#HealthNodeFragment12 {
-    position: absolute;
-    top: calc(var(--map-grid) * 34);
-    left:calc(var(--map-grid) * 61);
-}
-
-#HealthNodeFragment11 {
-    position: absolute;
-    top: calc(var(--map-grid) * 33);
-    left:calc(var(--map-grid) * 68);
-}
-
-#PowerNode4 {
-    position: absolute;
-    top: calc(var(--map-grid) * 31);
-    left:calc(var(--map-grid) * 68);
-}
-
-#Note17 {
-    position: absolute;
-    top: calc(var(--map-grid) * 33);
-    left:calc(var(--map-grid) * 56);
-}
-
-#PowerNodeFragment14 {
-    position: absolute;
-    top: calc(var(--map-grid) * 32);
-    left:calc(var(--map-grid) * 56);
-}
-
-#Reflect {
-    position: absolute;
-    top: calc(var(--map-grid) * 32);
-    left:calc(var(--map-grid) * 63);
-}
-
-#EnhancedLaunch {
-    position: absolute;
-    top: calc(var(--map-grid) * 33);
-    left:calc(var(--map-grid) * 62);
-}
-
-#Note12 {
-    position: absolute;
-    top: calc(var(--map-grid) * 29);
-    left:calc(var(--map-grid) * 59);
-}
-
-#IonBeam {
-    position: absolute;
-    top: calc(var(--map-grid) * 39);
-    left:calc(var(--map-grid) * 56);
-}
-
-/* AREA 5 - Indi */
-
-#Note25 {
-    position: absolute;
-    top: calc(var(--map-grid) * 48);
-    left:calc(var(--map-grid) * 18);
-}
-
-#Note9 {
-    position: absolute;
-    top: calc(var(--map-grid) * 47);
-    left:calc(var(--map-grid) * 41);
-}
-
-#HealthNodeFragment15 {
-    position: absolute;
-    top: calc(var(--map-grid) * 49);
-    left:calc(var(--map-grid) * 46);
-}
-
-/* AREA 6 - Ukkin-Na */
-
-#BlackCoat {
-    position: absolute;
-    top: calc(var(--map-grid) * 36);
-    left:calc(var(--map-grid) * 25);
-}
-
-#Note22 {
-    position: absolute;
-    top: calc(var(--map-grid) * 42);
-    left:calc(var(--map-grid) * 24);
-}
-
-#PowerNodeFragment15 {
-    position: absolute;
-    top: calc(var(--map-grid) * 39);
-    left:calc(var(--map-grid) * 25);
-}
-
-#PowerNodeFragment13 {
-    position: absolute;
-    top: calc(var(--map-grid) * 34);
-    left:calc(var(--map-grid) * 27);
-}
-
-#HealthNodeFragment16 {
-    position: absolute;
-    top: calc(var(--map-grid) * 32);
-    left:calc(var(--map-grid) * 25);
-}
-
-#HealthNode5 {
-    position: absolute;
-    top: calc(var(--map-grid) * 35);
-    left:calc(var(--map-grid) * 21);
-}
-
-#Note8 {
-    position: absolute;
-    top: calc(var(--map-grid) * 32);
-    left:calc(var(--map-grid) * 20);
-}
-
-#Note23 {
-    position: absolute;
-    top: calc(var(--map-grid) * 42);
-    left:calc(var(--map-grid) * 21);
-}
-
-#HealthNodeFragment18 {
-    position: absolute;
-    top: calc(var(--map-grid) * 43);
-    left:calc(var(--map-grid) * 21);
-}
-
-#TriCone {
-    position: absolute;
-    top: calc(var(--map-grid) * 27);
-    left:calc(var(--map-grid) * 27);
-}
-
-#PowerNodeFragment10 {
-    position: absolute;
-    top: calc(var(--map-grid) * 44);
-    left:calc(var(--map-grid) * 26);
-}
-
-/* AREA 7 - Edin */
-
-#Note18 {
-    position: absolute;
-    top: calc(var(--map-grid) * 43);
-    left:calc(var(--map-grid) * 42);
-}
-
-#Note27 {
-    position: absolute;
-    top: calc(var(--map-grid) * 42);
-    left:calc(var(--map-grid) * 41);
-}
-
-#GlitchBomb {
-    position: absolute;
-    top: calc(var(--map-grid) * 45);
-    left:calc(var(--map-grid) * 45);
-}
-
-#PowerNode5 {
-    position: absolute;
-    top: calc(var(--map-grid) * 43);
-    left:calc(var(--map-grid) * 45);
-}
-
-#HealthNode6 {
-    position: absolute;
-    top: calc(var(--map-grid) * 43);
-    left:calc(var(--map-grid) * 44);
-}
-
-#RangeNode3 {
-    position: absolute;
-    top: calc(var(--map-grid) * 45);
-    left:calc(var(--map-grid) * 39);
-}
-
-#Shards {
-    position: absolute;
-    top: calc(var(--map-grid) * 45);
-    left:calc(var(--map-grid) * 36);
-}
-
-#Note5 {
-    position: absolute;
-    top: calc(var(--map-grid) * 42);
-    left:calc(var(--map-grid) * 38);
-}
-
-#DroneTeleport {
-    position: absolute;
-    top: calc(var(--map-grid) * 36);
-    left:calc(var(--map-grid) * 34);
-}
-
-#HealthNodeFragment19 {
-    position: absolute;
-    top: calc(var(--map-grid) * 39);
-    left:calc(var(--map-grid) * 41);
-}
-
-#DistortionField {
-    position: absolute;
-    top: calc(var(--map-grid) * 38);
-    left:calc(var(--map-grid) * 42);
-}
-
-#Note4 {
-    position: absolute;
-    top: calc(var(--map-grid) * 38);
-    left:calc(var(--map-grid) * 37);
-}
-
-#HealthNode7 {
-    position: absolute;
-    top: calc(var(--map-grid) * 40);
-    left:calc(var(--map-grid) * 35);
-}
-
-#PowerNodeFragment17 {
-    position: absolute;
-    top: calc(var(--map-grid) * 39);
-    left:calc(var(--map-grid) * 37);
-}
-
-#TendrilsBottom {
-    position: absolute;
-    top: calc(var(--map-grid) * 43);
-    left:calc(var(--map-grid) * 34);
-}
-
-#HealthNodeFragment20 {
-    position: absolute;
-    top: calc(var(--map-grid) * 43);
-    left:calc(var(--map-grid) * 30);
-}
-
-/* AREA 8 - E-Kur-Mah */
-
-#Note1 {
-    position: absolute;
-    top: calc(var(--map-grid) * 29);
-    left:calc(var(--map-grid) * 65);
-}
-
-#Note3 {
-    position: absolute;
-    top: calc(var(--map-grid) * 28);
-    left:calc(var(--map-grid) * 70);
-}
-
-#BreachSuppressor {
-    position: absolute;
-    top: calc(var(--map-grid) * 27);
-    left:calc(var(--map-grid) * 69);
-}
-
-#PowerNode6 {
-    position: absolute;
-    top: calc(var(--map-grid) * 26);
-    left:calc(var(--map-grid) * 65);
-}
-
-#HealthNodeFragment17 {
-    position: absolute;
-    top: calc(var(--map-grid) * 42);
-    left:calc(var(--map-grid) * 68);
-}
-
-#RedCoat {
-    position: absolute;
-    top: calc(var(--map-grid) * 45);
-    left:calc(var(--map-grid) * 66);
-}
-
-#PowerNodeFragment18 {
-    position: absolute;
-    top: calc(var(--map-grid) * 46);
-    left:calc(var(--map-grid) * 67);
-}
-
-#Note11 {
-    position: absolute;
-    top: calc(var(--map-grid) * 33);
-    left:calc(var(--map-grid) * 70);
-}
-
-#Swim {
-    position: absolute;
-    top: calc(var(--map-grid) * 41);
-    left:calc(var(--map-grid) * 66);
-}
-
-/* AREA 9 - Mar-Uru */
-
-#HealthNode8 {
-    position: absolute;
-    top: calc(var(--map-grid) * 20);
-    left:calc(var(--map-grid) * 22);
-}
-
-#PowerNodeFragment11 {
-    position: absolute;
-    top: calc(var(--map-grid) * 20);
-    left:calc(var(--map-grid) * 24);
-}
-
-#Note6 {
-    position: absolute;
-    top: calc(var(--map-grid) * 21);
-    left:calc(var(--map-grid) * 24);
-}
-
-#PowerNodeFragment12 {
-    position: absolute;
-    top: calc(var(--map-grid) * 21);
-    left:calc(var(--map-grid) * 25);
-}
-
-#SizeNode4 {
-    position: absolute;
-    top: calc(var(--map-grid) * 16);
-    left:calc(var(--map-grid) * 25);
-}
-
-#Note26 {
-    position: absolute;
-    top: calc(var(--map-grid) * 14);
-    left:calc(var(--map-grid) * 22);
-}
-
-#Scythe {
-    position: absolute;
-    top: calc(var(--map-grid) * 16);
-    left:calc(var(--map-grid) * 21);
-}
-
-#Note21 {
-    position: absolute;
-    top: calc(var(--map-grid) * 9);
-    left:calc(var(--map-grid) * 23);
 }
